--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
+    "serve": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
-  "author": "",
+  "author": "DPain",
   "license": "ISC",
   "description": "",
   "devDependencies": {
